k8s/core/external-dns/extra/base/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-egress-kube-apiserver
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - kube-apiserver
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-https
spec:
  endpointSelector: {}
  egress:
    - toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: knot-dns
            app.kubernetes.io/component: ns0
            k8s:io.kubernetes.pod.namespace: infra-knot-dns
